trunk/Archive2/d2/6a85e8fac71cb6/output
main.cpp: In function 'int main()':
main.cpp:30:38: error: conversion from 'std::tuple<>' to non-scalar type 'main()::<anonymous struct>' requested
     struct {} _ = awesome_tuple_cat( );
                                      ^
main.cpp:31:44: error: conversion from 'std::tuple<bool, char, short int, int>' to non-scalar type 'main()::<anonymous struct>' requested
     struct {} __ = awesome_tuple_cat( a, b );
                                            ^
main.cpp:32:48: error: conversion from 'std::tuple<bool, char, short int, int, long long int>' to non-scalar type 'main()::<anonymous struct>' requested
     struct {} ___ = awesome_tuple_cat( a, b, c );
                                                ^
